--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						<a href="https://airelles.com/en/destination/chateau-de-versailles-hotel" target="_blank" class="btn-blue">Discover</a>
 					</div>
 					<div class="card">
-						<img src="images/orangerie.JPG" alt="L'orangerie White-Palacio">
+						<img src="images/orangerie.jpg" alt="L'orangerie White-Palacio">
 						<h3>L'Orangerie White-Palacio</h3>
 						<a href="https://l-orangerie-white-palacio-apartment-versailles.hotelmix.fr/" target="_blank" class="btn-blue">Discover</a>
 					</div>
